sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_departpos/errors.duarouter
Error: Invalid departpos definition for vehicle '1'
Quitting (on error).
